<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoopCast</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="action_direct_mode">Cast direkte (uden relæ)</string>
    <string name="action_battery">Undtag fra batterioptimering</string>

    <string name="url_hint">SoundCloud-link (fx https://on.soundcloud.com/…)</string>
    <string name="paste">Indsæt link</string>
    <string name="save">Gem</string>
    <string name="play_loop">Afspil i loop på Nest</string>
    <string name="stop">Stop</string>
    <string name="saved_tracks">Gemte tracks</string>
    <string name="no_saved_tracks">Ingen gemte tracks endnu. Indsæt et link og tryk Gem eller Afspil.</string>
    <string name="play_track">Afspil track</string>
    <string name="delete_track">Slet track</string>
    <string name="delete_confirm_title">Slet gemt track?</string>
    <string name="delete_confirm_message">%1$s fjernes fra listen.</string>
    <string name="delete">Slet</string>
    <string name="cancel">Annuller</string>
    <string name="hint_text">Telefonen og din Google Nest skal være på samme Wi‑Fi. Tryk på cast-ikonet øverst for at vælge din Nest, indsæt et SoundCloud-link og tryk Afspil. Tracket hentes til telefonen én gang og kører derefter i loop fra telefonen, indtil du trykker Stop. Lad telefonen være tændt og på Wi‑Fi natten over. Under menuen (⋮) kan du undtage appen fra batterioptimering – det anbefales. Har du en Samsung, så tilføj også LoopCast under Batteri → “Apps der aldrig sover”.</string>

    <string name="status_idle">Klar. Vælg din Nest via cast-ikonet og indsæt et link.</string>
    <string name="status_connected">Forbundet til %1$s</string>
    <string name="status_pick_device">Vælg din Google Nest i cast-menuen – afspilningen starter automatisk bagefter.</string>
    <string name="status_resolving">Slår tracket op på SoundCloud…</string>
    <string name="status_playing_on">Afspiller i loop på %1$s</string>
    <string name="status_stopped">Stoppet.</string>
    <string name="status_cast_failed">Kunne ikke forbinde til cast-enheden.</string>
    <string name="status_playback_error">Nest’en meldte en afspilningsfejl. Prøv igen, eller slå “Cast direkte” til/fra i menuen.</string>
    <string name="status_no_play_services">Google Play-tjenester mangler – casting virker ikke på denne enhed.</string>
    <string name="status_error">Fejl: %1$s</string>
    <string name="status_downloading">Henter tracket til telefonen (%1$d %%)…</string>
    <string name="status_downloading_unknown">Henter tracket til telefonen…</string>
    <string name="status_disconnected">Forbindelsen til Nest’en er afbrudt. Relæet kører videre og prøver selv at genoprette forbindelsen. Tryk Stop for at afslutte helt.</string>
    <string name="download_failed_streaming">Kunne ikke gemme tracket lokalt – streamer direkte fra SoundCloud i stedet.</string>

    <string name="error_empty_url">Indsæt et SoundCloud-link først.</string>
    <string name="error_not_soundcloud">Det ligner ikke et SoundCloud-link.</string>
    <string name="error_no_wifi_ip">Kunne ikke finde telefonens Wi‑Fi-adresse. Er du på Wi‑Fi?</string>
    <string name="error_session_lost">Forbindelsen til cast-enheden blev afbrudt.</string>
    <string name="error_clipboard_empty">Der er ikke noget link i udklipsholderen.</string>
    <string name="saved_ok">Gemt.</string>
    <string name="battery_already">Appen er allerede undtaget fra batterioptimering.</string>

    <string name="notification_channel">Afspilning</string>
    <string name="notification_title">LoopCast kører</string>
    <string name="notification_text">Holder loopet kørende på din Nest. Tryk Stop for at afslutte.</string>
    <string name="play">Afspil</string>
    <string name="pause">Pause</string>
    <string name="rewind_15">−15 s</string>
    <string name="forward_15">+15 s</string>
    <string name="to_end">Spol til slut</string>
    <string name="position_format">%1$s / %2$s</string>
    <string name="loop_count">Loop nr. %1$d</string>
    <string name="loop_count_first">Første gennemspilning</string>
    <string name="timer_button">Timer</string>
    <string name="timer_title">Stop automatisk</string>
    <string name="timer_none_text">Ingen stop-timer – loopet kører, indtil du trykker Stop.</string>
    <string name="timer_active">Stopper kl. %1$s (om %2$s)</string>
    <string name="timer_none">Ingen timer</string>
    <string name="timer_minutes">Om %1$d minutter</string>
    <string name="timer_one_hour">Om 1 time</string>
    <string name="timer_hours">Om %1$d timer</string>
    <string name="timer_pick_time">Vælg klokkeslæt…</string>
    <string name="timer_last_clock">Kl. %1$s (som sidst)</string>
    <string name="timer_set">Stopper kl. %1$s</string>
    <string name="timer_cleared">Stop-timer fjernet.</string>
    <string name="remaining_hours_minutes">%1$d t %2$d min</string>
    <string name="remaining_minutes">%1$d min</string>
    <string name="status_timer_stopped">Stop-timeren stoppede afspilningen.</string>
</resources>
